# real-time-crypto-price-predictor

./: .dockerignore  .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-to-digitalocean.yml
dashboards/grafana/: Crypto-Currency-Price-1746039370198.json  Technical-Indicators-1746039061725.json
deployments/dev/: README.md
deployments/dev/candles/: candles.yaml  kustomization.yaml
deployments/dev/kind/: apply-grafana-dashboards.sh  create_cluster.sh  generate-dashboard-configmaps.sh  install_metabase.sh  install_mlflow.sh  kind-with-portmapping.yaml
deployments/dev/kind/manifests/: grafana-dashboards.yaml  mlflow-minio-secret.yaml
deployments/dev/predictor/: config-map.yaml  cron-job.yaml  kustomization.yaml  predictor.yaml  secrets.yaml
deployments/dev/technical_indicators/: kustomization.yaml  technical_indicators.yaml
deployments/dev/template/: service-template.yaml
deployments/dev/trades/: kustomization.yaml  trades-backfill.yaml  trades-websocket.yaml  trades.yaml
deployments/prod/: MAKEFILE_MIGRATION.md  NEW_CLUSTER_DEPLOYMENT_CHECKLIST.md  QUICK_REFERENCE.md  README.md  README_INFRASTRUCTURE_DEPLOYMENT.md  create-do-k8s-cluster.sh  deploy-to-digitalocean.sh  deploy_infrastructure.sh  deployment.config  generate_grafana_dashboards.py  pre_deployment_check.sh  validate_deployment.sh
deployments/prod/manifests/: kafka-and-topics.yaml  kafka-cluster.yaml  kafka-ui.yaml
deployments/prod/manifests/infrastructure/: grafana-dashboards.yaml  grafana-values.yaml  mlflow-minio-secret.yaml  mlflow-values.yaml  risingwave-post-install-job.yaml  risingwave-values.yaml
deployments/prod/manifests/processed/: kafka-cluster.yaml  (+6 more)
deployments/structurizr/: structurizr.yaml
docker/: candles.Dockerfile  deduplication.Dockerfile  predictor.Dockerfile  predictor_training.Dockerfile  service.Dockerfile  structurizr.Dockerfile  technical_indicators.Dockerfile  trades.Dockerfile
docs/: TRADES_SERVICE_RESILIENCE_GUIDE.md
docs/c4model/: README.md  model.dsl  style-definitions.dsl  views.dsl  workspace.dsl
docs/c4model/adrs/: 0001-microservices-architecture.md  0002-feature-store-selection.md  0003-apis-implementation.md  0004-model-registry-tracking.md  0005-metric-monitoring-visualization.md  0006-real-time-data-processing.md
docs/c4model/docs/: 00-introduction.md  01-data-pipelines.md  02-services.md  03-technologies.md  04-deployment.md
scripts/: cleanup_duplicates.sql
services/candles/: pyproject.toml  settings.env
services/deduplication/: pyproject.toml
services/deduplication/src/deduplication/: __init__.py  main.py
services/predictor/: README.md  pyproject.toml  settings.env
services/predictor/src/predictor/: __init__.py  baseline_model.py  config.py  data_fetcher.py  data_preprocessor.py  data_profiler.py  data_validator.py  drift_analyzer.py  main.py  main_rough.py  mlflow_logger.py  model_trainer.py  model_tuner.py  test_model_trainer.py  train.py
services/technical_indicators/: pyproject.toml  settings.env  ti_config.yaml
services/technical_indicators/src/technical_indicators/: __init__.py  candle_utils.py  config.py  indicators.py  main.py  query.sql  tables.py
services/trades/: README_PROGRESSIVE_STREAMING.md  pyproject.toml  settings.env
services/trades/src/trades/: config.py  kraken_api.py  kraken_rest_api.py  kraken_websocket_api.py  main.py  trade.py
(+21 files in other folders)
