[project]
name = "predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mdshihabullah", email = "68374369+mdshihabullah@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "evidently>=0.7.4",
    "great-expectations>=0.18.8",
    "lazypredict>=0.2.16",
    "mlflow>=2.22.0",
    "risingwave-py>=0.0.1",
    "scikit-learn>=1.6.1",
    "htmlmin2>=0.1.13",
    "ydata-profiling>=4.6.3",
    "optuna>=4.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
