[project]
name = "technical-indicators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mdshihabullah", email = "68374369+mdshihabullah@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ta-lib>=0.6.3",
    "confluent-kafka>=2.8.2",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "quixstreams>=3.13.1",
    "websocket-client>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
